tests/scan/fixtures/validation/negative/clean_npm_obfs_strings/index.js
const ALPHABET = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz';
const DIGITS = '0123456789';
module.exports = { ALPHABET, DIGITS };
